# architectural-project-assistant

./: .gitignore  LICENSE  README.md  chatbot_ui.py  event_handler.py  pyproject.toml  test_extractor.py
src/: main.py
src/api/: collection_endpoint.py
src/infrastructure/: __init__.py  chunker.py  clustering.py  collection_manager.py  extractor.py
src/models/: item.py
src/prompts/: extraction_prompt copy.md  extraction_prompt.md
src/protocols/: chunking.py  collection_manager.py  extractor.py
src/settings/: common.py
